--- a/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable.twig
+++ b/plugins/CoreVisualizations/templates/_dataTableViz_htmlTable.twig
@@ -12,7 +12,7 @@
         <tbody>
     {%- endif -%}
         {% if showingEmbeddedSubtable and dataTable.getRowsCount() == 0 %}
-            <tr>
+            <tr class="nodata">
                 <td colspan="{{ properties.columns_to_display|length }}">{{ 'CoreHome_CategoryNoData'|translate }}</td>
             </tr>
         {% else %}
