Remove MobileVSDesktop reports as we now have detailed device type reports; rename GetWideScreen report to GetScreenType, as that better points out what it returns

--- a/plugins/UserSettings/templates/index.twig
+++ b/plugins/UserSettings/templates/index.twig
@@ -17,8 +17,8 @@
     <h2 piwik-enriched-headline>{{ 'UserSettings_Resolutions'|translate }}</h2>
     {{ dataTableResolution|raw }}
 
-    <h2 piwik-enriched-headline>{{ 'UserSettings_MobileVsDesktop'|translate }}</h2>
-    {{ dataTableMobileVsDesktop|raw }}
+    <h2 piwik-enriched-headline>{{ 'UserSettings_ScreenTypes'|translate }}</h2>
+    {{ dataTableScreenType|raw }}
 
     <h2 piwik-enriched-headline>{{ 'UserSettings_BrowserLanguage'|translate }}</h2>
     {{ dataTableBrowserLanguage|raw }}
