refs #6469 update smartbanner lib and make sure it works

--- a/plugins/Login/templates/login.twig
+++ b/plugins/Login/templates/login.twig
@@ -28,7 +28,7 @@
         $(function () {
             $('#form_login').focus();
             $('input').placeholder();
-            $.smartbanner({title: "Piwik Mobile 2", author: "Piwik team", icon: "plugins/CoreHome/images/googleplay.png"});
+            $.smartbanner({title: "Piwik Mobile 2", author: "Piwik team", hideOnInstall: false, layer: true, icon: "plugins/CoreHome/images/googleplay.png"});
         });
 	</script>
 	</head>
