refs #6469 fix screenshot diff does not work, updated changelog, use jquery-ui.css from bower

--- a/plugins/CoreUpdater/templates/layout.twig
+++ b/plugins/CoreUpdater/templates/layout.twig
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE,chrome=1"/>
     <meta name="viewport" content="initial-scale=1.0" />
 
-    <link rel="stylesheet" type="text/css" href="libs/jquery/themes/base/jquery-ui.css"/>
+    <link rel="stylesheet" type="text/css" href="libs/bower_components/jquery-ui/themes/ui-lightness/jquery-ui.min.css"/>
     <link rel="stylesheet" type="text/css" href="index.php?module=Installation&action=getBaseCss"/>
     <link rel="stylesheet" type="text/css" href="plugins/Morpheus/stylesheets/simple_structure.css"/>
     <link rel="stylesheet" type="text/css" href="plugins/CoreHome/stylesheets/jquery.ui.autocomplete.css" />
