--- a/plugins/Installation/templates/layout.twig
+++ b/plugins/Installation/templates/layout.twig
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <title>Piwik &rsaquo; {{ 'Installation_Installation'|translate }}</title>
-    <link rel="stylesheet" type="text/css" href="libs/jquery/themes/base/jquery-ui.css"/>
+    <link rel="stylesheet" type="text/css" href="libs/bower_components/jquery-ui/themes/ui-lightness/jquery-ui.min.css"/>
     <link rel="stylesheet" type="text/css" href="index.php?module=Installation&action=getBaseCss"/>
     <link rel="shortcut icon" href="plugins/CoreHome/images/favicon.ico"/>
     <script type="text/javascript" src="libs/bower_components/jquery/dist/jquery.min.js"></script>
