we require PHP >= 5.3.3 not PHP >

--- a/plugins/Installation/templates/_systemCheckSection.twig
+++ b/plugins/Installation/templates/_systemCheckSection.twig
@@ -5,7 +5,7 @@
 
 <table class="infosServer" id="systemCheckRequired">
     <tr>
-        {% set MinPHP %}{{ 'Installation_SystemCheckPhp'|translate }} &gt; {{ infos.phpVersion_minimum }}{% endset %}
+        {% set MinPHP %}{{ 'Installation_SystemCheckPhp'|translate }} &gt;= {{ infos.phpVersion_minimum }}{% endset %}
         <td class="label">{{ MinPHP }}</td>
 
         <td>
