--- a/plugins/TestRunner/templates/travis.yml.twig
+++ b/plugins/TestRunner/templates/travis.yml.twig
@@ -128,11 +128,10 @@ before_script:
 {% if customTravisBuildSteps.before_script.before|default is not empty %}{{ customTravisBuildSteps.before_script.before|raw }}
 
 {% endif %}
-  - if ([ -n "$TEST_SUITE" ]);
-    then phpenv config-rm xdebug.ini;
-    fi
   - if ([ -z "$TEST_SUITE" ] || [ -n "$PLUGIN_NAME" ]);
     then composer require satooshi/php-coveralls dev-master;
+    else
+    phpenv config-rm xdebug.ini;
     fi
 
   - ./tests/travis/configure_git.sh
