static width of 190px looks shitty in 2 & 3 column layout for IPv6 ...
use percent not static width

--- a/plugins/Live/templates/_dataTableViz_visitorLog.twig
+++ b/plugins/Live/templates/_dataTableViz_visitorLog.twig
@@ -4,7 +4,7 @@
 <thead>
 <tr>
     <th style="display:none;"></th>
-    <th id="label" class="sortable label" style="cursor: auto;width:190px;" width="190px">
+    <th id="label" class="sortable label" style="cursor: auto; width:30%;">
         <div id="thDIV">{{ 'General_Date'|translate }}</div>
     </th>
     {% if displayVisitorsInOwnColumn %}
