--- a/plugins/Feedback/templates/index.twig
+++ b/plugins/Feedback/templates/index.twig
@@ -12,13 +12,13 @@
 
         <div class="header_full">
             <p>{{ 'General_PiwikIsACollaborativeProjectYouCanContributeAndDonate'|translate(
-            "<a href='?module=Proxy&action=redirect&url=http://piwik.org' target='_blank'>",
+            "<a href='?module=Proxy&action=redirect&url=http://piwik.org' rel='noreferrer' target='_blank'>",
             "</a>",
-            "<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/get-involved/'>",
+            "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/get-involved/'>",
             "</a>",
             "<a href='#donate'>",
             "</a>",
-            "<a href='?module=Proxy&action=redirect&url=http://piwik.org/team/' target='_blank'>",
+            "<a href='?module=Proxy&action=redirect&url=http://piwik.org/team/' rel='noreferrer' target='_blank'>",
             "</a>"
             )|raw }}
             </p>
@@ -28,9 +28,9 @@
         <h2>{{ 'Do you need help?'|translate }}</h2>
 
         <div class="header_full">
-            <p> &bull; {{ 'Feedback_ViewUserGuides'|translate("<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/docs/'>","</a>")|raw }}.</p>
-            <p> &bull; {{ 'Feedback_ViewAnswersToFAQ'|translate("<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/faq/'>","</a>")|raw }}.</p>
-            <p> &bull; {{ 'Feedback_VisitTheForums'|translate("<a target='_blank' href='?module=Proxy&action=redirect&url=http://forum.piwik.org/'>","</a>")|raw }}.</p>
+            <p> &bull; {{ 'Feedback_ViewUserGuides'|translate("<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/docs/'>","</a>")|raw }}.</p>
+            <p> &bull; {{ 'Feedback_ViewAnswersToFAQ'|translate("<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/faq/'>","</a>")|raw }}.</p>
+            <p> &bull; {{ 'Feedback_VisitTheForums'|translate("<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://forum.piwik.org/'>","</a>")|raw }}.</p>
             <br/>
         </div>
 
@@ -38,13 +38,13 @@
 
         <div class="header_full">
             <p>{{ 'Feedback_HowToCreateTicket'|translate(
-                "<a target='_blank' href='?module=Proxy&action=redirect&url=http://developer.piwik.org/guides/core-team-workflow%23submitting-a-bug-report'>",
+                "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://developer.piwik.org/guides/core-team-workflow%23submitting-a-bug-report'>",
                 "</a>",
-                "<a target='_blank' href='?module=Proxy&action=redirect&url=http://developer.piwik.org/guides/core-team-workflow%23submitting-a-feature-request'>",
+                "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://developer.piwik.org/guides/core-team-workflow%23submitting-a-feature-request'>",
                 "</a>",
-                "<a target='_blank' href='?module=Proxy&action=redirect&url=https://github.com/piwik/piwik/issues'>",
+                "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=https://github.com/piwik/piwik/issues'>",
                 "</a>",
-                "<a target='_blank' href='?module=Proxy&action=redirect&url=https://github.com/piwik/piwik/issues/new'>",
+                "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=https://github.com/piwik/piwik/issues/new'>",
                 "</a>"
                 )|raw }}</p>
             <br/>
@@ -54,7 +54,7 @@
 
         <div class="header_full">
             <p>{{ 'Feedback_GetInTouch'|translate }}
-                <a target='_blank' href="?module=Proxy&action=redirect&url=http://piwik.org/contact/"
+                <a rel='noreferrer' target='_blank' href="?module=Proxy&action=redirect&url=http://piwik.org/contact/"
                     >{{ 'Feedback_ContactThePiwikTeam'|translate }}</a>
             </p>
             <br/>
@@ -68,35 +68,35 @@
             <hr/>
             <ul class="social">
                 <li>
-                    <a target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/newsletter/"><img class="icon" src="plugins/Feedback/images/newsletter.png"></a>
-                    <a target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/newsletter/">Newsletter</a>
+                    <a rel="noreferrer"  target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/newsletter/"><img class="icon" src="plugins/Feedback/images/newsletter.png"></a>
+                    <a rel="noreferrer"  target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/newsletter/">Newsletter</a>
                 </li>
                 <li>
-                    <a target="_blank" href="http://www.facebook.com/Piwik"><img class="icon" src="plugins/Feedback/images/facebook.png"></a>
-                    <a target="_blank" href="http://www.facebook.com/Piwik">Facebook</a>
+                    <a rel="noreferrer"  target="_blank" href="http://www.facebook.com/Piwik"><img class="icon" src="plugins/Feedback/images/facebook.png"></a>
+                    <a rel="noreferrer"  target="_blank" href="http://www.facebook.com/Piwik">Facebook</a>
                 </li>
                 <li>
-                    <a target="_blank" href="http://twitter.com/piwik"><img class="icon" src="plugins/Feedback/images/twitter.png"></a>
-                    <a target="_blank" href="http://twitter.com/piwik">Twitter</a>
+                    <a rel="noreferrer"  target="_blank" href="http://twitter.com/piwik"><img class="icon" src="plugins/Feedback/images/twitter.png"></a>
+                    <a rel="noreferrer"  target="_blank" href="http://twitter.com/piwik">Twitter</a>
                 </li>
                 <li>
-                    <a target="_blank" href="http://www.linkedin.com/groups?gid=867857"><img class="icon" src="plugins/Feedback/images/linkedin.png"></a>
-                    <a target="_blank" href="http://www.linkedin.com/groups?gid=867857">Linkedin</a>
+                    <a rel="noreferrer"  target="_blank" href="http://www.linkedin.com/groups?gid=867857"><img class="icon" src="plugins/Feedback/images/linkedin.png"></a>
+                    <a rel="noreferrer"  target="_blank" href="http://www.linkedin.com/groups?gid=867857">Linkedin</a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://github.com/piwik/piwik"><img class="icon" src="plugins/Feedback/images/github.png"></a>
-                    <a target="_blank" href="https://github.com/piwik/piwik">GitHub</a>
+                    <a rel="noreferrer"  target="_blank" href="https://github.com/piwik/piwik"><img class="icon" src="plugins/Feedback/images/github.png"></a>
+                    <a rel="noreferrer"  target="_blank" href="https://github.com/piwik/piwik">GitHub</a>
                 </li>
             </ul>
             <ul class="menu">
-                <li><a target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/blog/">Blog</a></li>
-                <li><a target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/about/sponsors/">Sponsors</a></li>
-                <li><a target="_blank" href="?module=Proxy&action=redirect&url=http://developer.piwik.org">Developers</a></li>
-                <li><a target="_blank" href="?module=Proxy&action=redirect&url=http://plugins.piwik.org">Marketplace</a></li>
-                <li><a target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/thank-you-all/">Credits</a></li>
+                <li><a rel="noreferrer"  target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/blog/">Blog</a></li>
+                <li><a rel="noreferrer"  target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/about/sponsors/">Sponsors</a></li>
+                <li><a rel="noreferrer"  target="_blank" href="?module=Proxy&action=redirect&url=http://developer.piwik.org">Developers</a></li>
+                <li><a rel="noreferrer"  target="_blank" href="?module=Proxy&action=redirect&url=http://plugins.piwik.org">Marketplace</a></li>
+                <li><a rel="noreferrer"  target="_blank" href="?module=Proxy&action=redirect&url=http://piwik.org/thank-you-all/">Credits</a></li>
             </ul>
             <p class="claim"><small>{{ 'Feedback_PrivacyClaim'|translate(
-                    "<a target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/privacy/'>",
+                    "<a rel='noreferrer' target='_blank' href='?module=Proxy&action=redirect&url=http://piwik.org/privacy/'>",
                     "</a>"
                 )|raw}}</small></p>
         </div>
