--- a/plugins/Login/templates/login.twig
+++ b/plugins/Login/templates/login.twig
@@ -54,7 +54,7 @@
 
         {% if isCustomLogo %}
             {% set poweredByPiwik %}
-            <i><a href="http://piwik.org/" target="_blank">{{ linkTitle }}</a></i>
+            <i><a href="http://piwik.org/" rel="noreferrer"  target="_blank">{{ linkTitle }}</a></i>
             {% endset %}
         {% endif %}
 
