--- a/plugins/SEO/templates/getRank.twig
+++ b/plugins/SEO/templates/getRank.twig
@@ -18,14 +18,14 @@
                 {{ 'General_Error'|translate }}
             {% else %}
                 {% set cleanUrl %}
-                    <a href="http://{{ urlToRank }}" target="_blank">{{ urlToRank }}</a>
+                    <a href="http://{{ urlToRank }}" rel="noreferrer"  target="_blank">{{ urlToRank }}</a>
                 {% endset %}
                 {{ 'SEO_SEORankingsFor'|translate(cleanUrl)|raw }}
                 <table cellspacing="2" style="margin:auto;line-height:1.5em;padding-top:10px;">
                     {% for rank in ranks %}
                         <tr>
 {% set seoLink %}{% if rank.logo_link is defined %}<a class="linkContent" href="?module=Proxy&action=redirect&url={{ rank.logo_link|url_encode }}"
-                                                    target="_blank"
+                                                    rel="noreferrer"  target="_blank"
                          {% if rank.logo_tooltip is not empty %}title="{{ rank.logo_tooltip }}"{% endif %}>{% endif %}{% endset %}
                             {% set majesticLink %}{{ seoLink }}Majestic</a>{% endset %}
                             <td>{% if rank.logo_link is defined %}{{ seoLink|raw }}{% endif %}<img
